// Vitest Snapshot v1

exports[`Tooltip > Tooltip arrowVue demo works fine 1`] = `
<div>
  <t-tooltip
    onvisiblechange="function () { [native code] }"
  >
    <t-button
      variant="outline"
    >
      带箭头文字提示
    </t-button>
    <div
      slot="content"
    >
      这是自定义的带箭头文字内容
    </div>
  </t-tooltip>
</div>
`;

exports[`Tooltip > Tooltip baseVue demo works fine 1`] = `
<div
  class="tdesign-tooltip-placement"
  data-v-dd7c12c0=""
>
  <t-tooltip
    class="placement top center"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="top"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      style="width: 80px;"
      variant="outline"
    >
       top 
    </t-button>
  </t-tooltip>
  <t-tooltip
    class="placement top left"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="top-left"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      variant="outline"
    >
       top-left 
    </t-button>
  </t-tooltip>
  <t-tooltip
    class="placement top right"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="top-right"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      variant="outline"
    >
       top-right 
    </t-button>
  </t-tooltip>
  <t-tooltip
    class="placement bottom center"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="bottom"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      style="width: 80px;"
      variant="outline"
    >
       bottom 
    </t-button>
  </t-tooltip>
  <t-tooltip
    class="placement bottom left"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="bottom-left"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      variant="outline"
    >
       bottom-left 
    </t-button>
  </t-tooltip>
  <t-tooltip
    class="placement bottom right"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="bottom-right"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      variant="outline"
    >
       bottom-right 
    </t-button>
  </t-tooltip>
  <t-tooltip
    class="placement align"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="left"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      variant="outline"
    >
       left 
    </t-button>
  </t-tooltip>
  <t-tooltip
    class="placement top-align"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="left-top"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      variant="outline"
    >
       left-top 
    </t-button>
  </t-tooltip>
  <t-tooltip
    class="placement bottom-align"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="left-bottom"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      variant="outline"
    >
       left-bottom 
    </t-button>
  </t-tooltip>
  <t-tooltip
    class="placement right-full align"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="right"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      variant="outline"
    >
       right 
    </t-button>
  </t-tooltip>
  <t-tooltip
    class="placement right-full top-align"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="right-top"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      variant="outline"
    >
       right-top 
    </t-button>
  </t-tooltip>
  <t-tooltip
    class="placement right-full bottom-align"
    content="文字提示仅展示文本内容文字提示仅展示文本内容"
    data-v-dd7c12c0=""
    overlay-style="[object Object]"
    placement="right-bottom"
    show-arrow=""
  >
    <t-button
      data-v-dd7c12c0=""
      variant="outline"
    >
       right-bottom 
    </t-button>
  </t-tooltip>
</div>
`;

exports[`Tooltip > Tooltip durationVue demo works fine 1`] = `
<div>
  <t-tooltip
    content="提示在 5 秒后消失"
    default-visible=""
    duration="5000"
  >
    <t-button
      disabled=""
      variant="text"
    >
      定时消失
    </t-button>
  </t-tooltip>
  <!---->
</div>
`;

exports[`Tooltip > Tooltip mouseVue demo works fine 1`] = `
<div
  class="tdesign-tooltip-demo"
>
  <t-tooltip
    content="文案比较长长长确实很长"
    placement="mouse"
  >
    <a
      href="#"
    >
      文案比较长...
    </a>
  </t-tooltip>
</div>
`;

exports[`Tooltip > Tooltip noArrowVue demo works fine 1`] = `
<div>
  <t-tooltip
    content="文字提示仅展示文本内容"
  >
    <t-button
      variant="outline"
    >
      不带箭头的文字提示
    </t-button>
  </t-tooltip>
</div>
`;

exports[`Tooltip > Tooltip themeVue demo works fine 1`] = `
<div
  class="tdesign-tooltip-demo"
>
  <t-tooltip
    content="文字提示仅展示文本内容"
  >
    <t-button
      theme="default"
    >
      default
    </t-button>
  </t-tooltip>
  <t-tooltip
    content="文字提示仅展示文本内容"
    theme="primary"
  >
    <t-button
      theme="primary"
    >
      primary
    </t-button>
  </t-tooltip>
  <t-tooltip
    content="文字提示仅展示文本内容"
    theme="success"
  >
    <t-button
      theme="success"
    >
      success
    </t-button>
  </t-tooltip>
  <t-tooltip
    content="文字提示仅展示文本内容"
    theme="danger"
  >
    <t-button
      theme="danger"
    >
      danger
    </t-button>
  </t-tooltip>
  <t-tooltip
    content="文字提示仅展示文本内容"
    theme="warning"
  >
    <t-button
      theme="warning"
    >
      warning
    </t-button>
  </t-tooltip>
  <t-tooltip
    content="文字提示仅展示文本内容"
    theme="light"
  >
    <t-button
      variant="outline"
    >
      light
    </t-button>
  </t-tooltip>
</div>
`;

exports[`Tooltip > Tooltip triggerVue demo works fine 1`] = `
<div
  class="tdesign-tooltip-demo"
  data-v-2b456f39=""
>
  <t-tooltip
    content="文字提示仅展示文本内容"
    data-v-2b456f39=""
  >
    <t-button
      data-v-2b456f39=""
      variant="outline"
    >
      悬浮时触发（默认）
    </t-button>
  </t-tooltip>
  <t-tooltip
    content="文字提示仅展示文本内容"
    data-v-2b456f39=""
    trigger="focus"
  >
    <t-input
      data-v-2b456f39=""
      placeholder="获得焦点时触发"
    />
  </t-tooltip>
  <t-tooltip
    content="文字提示仅展示文本内容"
    data-v-2b456f39=""
    trigger="click"
  >
    <t-button
      data-v-2b456f39=""
      variant="outline"
    >
      点击时触发
    </t-button>
  </t-tooltip>
  <t-tooltip
    content="文字提示仅展示文本内容"
    data-v-2b456f39=""
    trigger="context-menu"
  >
    <t-button
      data-v-2b456f39=""
      variant="outline"
    >
      右击时触发
    </t-button>
  </t-tooltip>
</div>
`;
